<resources>
    <string name="app_name">SchoolPlaner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_marks">Marks</string>
    <string name="menu_teachers">Teachers</string>
    <string name="menu_events">Events</string>
    <string name="menu_notes">Notes</string>
    <string name="addSubjectTitle">Add subject</string>
    <string name="addSubjectTitle_editText">Name</string>
    <string name="addSubjectLocation_editText">Location*</string>
    <string name="addSubjectType_editText">Type</string>
    <string name="addSubjectShortcut_editText">Shortcut*</string>
    <string name="addSubjectTeacher_editText">Teacher</string>
    <string name="addSubjectButton_editText">Add Subject</string>
    <string name="addSubjectNote_editText">Note*</string>
    <string name="subjectAdded_toast">Subject has been added</string>
    <string name="addSubjectError_missing">The required data has not been entered</string>
    <string name="editSubjectButton_editText">Edit Subject</string>
    <string name="removeSubjectButton_editText">RemoveSubject</string>
    <string name="subjectEdited_toast">Subject has been edited</string>
    <string name="subjectRemoved_toast">Subject has been removed</string>
    <string name="icon_contentDescription">Icon</string>
    <string name="cardView_subjectName">Subject name</string>
    <string name="cardView_subjectType">Subject type</string>
    <string name="cardView_subjectTeacher">Teacher</string>
    <string name="cardView_subjectLocation">Location</string>
    <string name="addTeacherTitle">Add Teacher</string>
    <string name="addTeacherName_editText">Name</string>
    <string name="addTeacherSurname_editText">Surrname</string>
    <string name="addTeacherPhone_editText">Phone*</string>
    <string name="addTeacherEMail_editText">E-mail address*</string>
    <string name="addTeacherLocation_editText">Room number*</string>
    <string name="addTeacherNote_editText">Note*</string>
    <string name="addTeacherButton_editText">Add Teacher</string>
    <string name="addTeacherDegree_editText">Degree</string>
    <string name="editTeacherButton_editText">Edit Teacher</string>
    <string name="removeTeacherButton_editText">Remove Teacher</string>
    <string name="cardView_teacherNameAndSurname">Name and Surname</string>
    <string name="cardView_teacherDegree">Degree</string>
    <string name="teacherAdded_toast">Teacher has been added</string>
    <string name="addTeacherError_missing">The required data has not been entered</string>
    <string name="teacherEdited_toast">Teacher has been edited</string>
    <string name="teacherRemoved_toast">Teacher has been removed</string>
    <string name="weather_city_menu">City</string>
    <string name="weather_updated_date">Updated at:</string>
    <string name="weather_weather_menu">Weather</string>
    <string name="weather_temperature_menu">0°C</string>
    <string name="weather_sunrise_menu">Sunrise</string>
    <string name="weather_sunset_menu">Sunset</string>
    <string name="weather_wind_menu">Wind</string>
    <string name="weather_pressure_menu">Pressure</string>
    <string name="weather_humidity_menu">Humidity</string>
    <string name="weather_value_menu">Value</string>
    <string name="weather_hour_menu">Hour</string>
    <string name="menu_weather">Weather</string>
    <string name="weather_feelTemperature_menu">RealFeel: 0°C</string>
    <string name="weather_error">There was an error getting the location</string>
    <string name="weather_loadingData_menu">Loading data...</string>
    <string name="addTask_title">Task title</string>
    <string name="addTask_desc">Task description</string>
    <string name="addTask_date">Task date</string>
    <string name="addTask_time">Task time</string>
    <string name="addTask_menu">Add task</string>
    <string name="addTask_title_hint">Title</string>
    <string name="addTask_desc_hint">Description</string>
    <string name="addTask_date_hint">Date</string>
    <string name="addTask_time_hint">Time</string>
</resources>