<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_subjects" />

        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/ic_baseline_emoji_events_24"
            android:title="@string/menu_marks" />

        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_teachers" />

        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_notes" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_weather" />

    </group>
</menu>