<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.schoolplanner.ui.home.HomeFragment"
        android:label="@string/menu_subjects"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_subjects"
        android:name="com.example.schoolplanner.ui.subjects.SubjectsFragment"
        android:label="@string/menu_subjects"
        tools:layout="@layout/fragment_subjects" />

    <fragment
        android:id="@+id/nav_marks"
        android:name="com.example.schoolplanner.ui.marks.MarksFragment"
        android:label="@string/menu_marks"
        tools:layout="@layout/fragment_marks" />

    <fragment
        android:id="@+id/nav_teachers"
        android:name="com.example.schoolplanner.ui.teachers.TeachersFragment"
        android:label="@string/menu_teachers"
        tools:layout="@layout/fragment_teachers" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.schoolplanner.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.schoolplanner.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.schoolplanner.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather" />

</navigation>