<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="10"
    tools:context=".ui.teachers.AddTeacher">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherName"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_person_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherName"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherName_editText"
        android:importantForAutofill="no"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:gravity="end"
      android:orientation="horizontal"
      android:weightSum="15">

    <EditText
        android:id="@+id/teacherSurname"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherSurname_editText"
        android:importantForAutofill="no"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherDegree"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_short_text_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherDegree"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherDegree_editText"
        android:importantForAutofill="no"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherEmail"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_mail_outline_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherEmail"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherEMail_editText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherPhone"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_phone_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherPhone"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherPhone_editText"
        android:importantForAutofill="no"
        android:inputType="phone"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherLocation"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherLocation"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherLocation_editText"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2"
      android:orientation="horizontal"
      android:weightSum="15">

    <ImageView
        android:id="@+id/iconTeacherNote"
        style="@style/addTeacher_imageView"
        app:srcCompat="@drawable/ic_baseline_edit_note_24"
        app:tint="#000000"
        tools:ignore="ContentDescription,NestedWeights" />

    <EditText
        android:id="@+id/teacherNote"
        style="@style/addTeacher_editText"
        android:hint="@string/addTeacherNote_editText"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        tools:ignore="TextContrastCheck" />
  </LinearLayout>

  <Button
      android:id="@+id/addTeacherButton"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:backgroundTint="#2E7030"
      android:text="@string/addTeacherButton_editText" />

  <Button
      android:id="@+id/editTeacherButton"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:backgroundTint="#2A57A6"
      android:text="@string/editTeacherButton_editText"
      android:visibility="gone" />

  <Button
      android:id="@+id/removeTeacherButton"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:backgroundTint="#871717"
      android:text="@string/removeTeacherButton_editText"
      android:visibility="gone" />
</LinearLayout>