<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teacher_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardBackgroundColor="#EAEAEA"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="5dp">

    <TextView
        android:id="@+id/teacherID_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iconTeacherName_Card"
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/icon_contentDescription"
            card_view:srcCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:id="@+id/teacherNameAndSurname_Card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cardView_teacherNameAndSurname"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/teacherDegree_Card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="end|center_vertical"
            android:text="@string/cardView_teacherDegree"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
